src/objects/User_Goals__c.object
<CustomObject>
    <description>Table to track monthly sales goals for users and any additional metrics we start measuring them by in the future</description>
    <fields>
        <fullName>Baseline_Target__c</fullName>
        <description>Used for the new commission program 1/27/2015,  this number indicates the baseline target for the person.  All other tiers are calculated off of it.</description>
        <label>Baseline Target</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cancelled_Dollars_In__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Amount of treatment dollars cancelled in interval</inlineHelpText>
        <label>Cancelled Dollars In</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cancelled_Dollars_Out__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Amount of treatment dollars cancelled out of interval</inlineHelpText>
        <label>Cancelled Dollars Out</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cancelled_Starts_In__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Number of starts cancelled in interval</description>
        <label>Cancelled Starts In</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cancelled_Starts_Out__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Number of starts cancelled out of interval</inlineHelpText>
        <label>Cancelled Starts Out</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Collected_Dollars__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Amount of revenue collected in the interval</description>
        <label>Collected Dollars</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Consults__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Number of consults seen during the interval</description>
        <label>Consults</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Financed_Consults__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Number of consults seen during the interval that applied for financing</description>
        <label>Financed Consults</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fiscal_Month__c</fullName>
        <defaultValue>MONTH(today())</defaultValue>
        <description>Two digit numerical representation of the fiscal month the goal is for</description>
        <label>Fiscal Month</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fiscal_Year__c</fullName>
        <defaultValue>YEAR(today())</defaultValue>
        <description>Four digit numerical representation of the fiscal year the budgeted number is for</description>
        <label>Fiscal Year</label>
        <precision>4</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GP_Collected_Fees__c</fullName>
        <description>GP Fees for Collections</description>
        <label>GP Collected Fees</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GP_Refunded_Fees__c</fullName>
        <description>GP Refunded Fees.</description>
        <label>GP Refunded Fees</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Goal_Type__c</fullName>
        <label>Goal Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Center</fullName>
                </value>
                <value>
                    <fullName>User</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Refunded_Dollars__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Amount of revenue refunded during the interval</description>
        <label>Refunded Dollars</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sales_Goal__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Sales Goal Target for the given month and year</description>
        <label>Sales Goal</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sold__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Amount of treatment sold in interval</description>
        <label>Sold</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Starts__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Number of starts created during the interval</description>
        <label>Starts</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Target_Dollars__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Snapshot of the sales target for this interval</description>
        <label>Target Dollars</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Target_Rate__c</fullName>
        <formula>( Collected_Dollars__c - Refunded_Dollars__c) / Target_Dollars__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Target Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Tier_1_Floor__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Tier 1 Floor</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tier_2_Floor__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Tier 2 Floor</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tier_3_Floor__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Tier 3 Floor</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Link to the user that this goal is tied to</description>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>User_Goals</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>User Goal</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>User Goals Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User Goals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>